# cpp_compile_time_interface

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/modules/: CleanFlags.cmake  CompilerWarnings.cmake  DisableExceptions.cmake  DisableRTTI.cmake
src/: consumer.cpp  consumer.h  main.cpp  producer.h  producer_a.cpp  producer_a.h  producer_b.cpp  producer_b.h
